<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rv_activity.RecyclerViewActivity">

    <ImageView
        android:id="@+id/ivMyProfilePicture"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTwitterIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_twitter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dvTopDivider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ivTwitterIcon" />

    <Button
        android:id="@+id/btnForYou"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="bottom"
        android:text="@string/for_you"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnFollowing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvTopDivider" />

    <Button
        android:id="@+id/btnFollowing"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="bottom"
        android:text="@string/following"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnForYou"
        app:layout_constraintTop_toBottomOf="@+id/dvTopDivider" />

    <View
        android:id="@+id/dvBottomDivider"
        style="@style/Divider"
        android:layout_width="match_parent"

        app:layout_constraintTop_toBottomOf="@+id/btnFollowing" />

    <Button
        android:id="@+id/btnGetPosts"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="bottom"
        android:text="@string/get_posts"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnDeletePosts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvBottomDivider" />

    <Button
        android:id="@+id/btnDeletePosts"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="bottom"
        android:text="@string/delete_posts"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnModifyPosts"
        app:layout_constraintStart_toEndOf="@+id/btnGetPosts"
        app:layout_constraintTop_toBottomOf="@+id/dvBottomDivider" />

    <Button
        android:id="@+id/btnModifyPosts"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="bottom"
        android:text="@string/update_posts"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDeletePosts"
        app:layout_constraintTop_toBottomOf="@+id/dvBottomDivider" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tweets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetPosts" />

</androidx.constraintlayout.widget.ConstraintLayout>