<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/img_profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llUserInformationTweet"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/userName"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user" />

        <TextView
            android:id="@+id/tvBulletDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:text="@string/bulletDivider" />

        <TextView
            android:id="@+id/tvPostTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/img_bullet_dots_menu" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvTextTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lorem"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/llUserInformationTweet" />

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:divider="@drawable/empty_divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintStart_toStartOf="@+id/tvTextTweet"
        app:layout_constraintTop_toBottomOf="@+id/tvTextTweet">

        <ImageButton
            android:id="@+id/ibComment"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/img_comment" />

        <ImageButton
            android:id="@+id/ibRetweet"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/img_retweet" />

        <ImageButton
            android:id="@+id/ibLike"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/img_like" />

        <ImageButton
            android:id="@+id/ibStatistics"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/img_statistics" />

        <ImageButton
            android:id="@+id/ibShare"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/img_share" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llActions" />


</androidx.constraintlayout.widget.ConstraintLayout>